--- a/env.example
+++ b/env.example
@@ -1,3 +1,4 @@
-FLASK_ENV=production
-SECRET_KEY=YOURSECRETKEY
-SQLALCHEMY_DATABASE_URI=mysql+pymysql://[USER]:[PASSWORD]@[HOST]:[PORT]/[DATABASE_NAME]
+FLASK_APP=wsgiapp.py
+FLASK_ENV=development
+SECRET_KEY=whatnothow
+SQLALCHEMY_DATABASE_URI=sqlite.db
